platforms/android/app/src/main/cpp/3rdparty/libjpeg-turbo/src/turbojpeg.h

/**
 * TurboJPEG instance handle
 */
typedef void *tjhandle;
/**
 * Returns a descriptive error message explaining why the last command failed.
 *
 * @param handle handle to a TurboJPEG instance, or NULL if the error was
 * generated by a global function (but note that retrieving the error message
 * for a global function is thread-safe only on platforms that support
 * thread-local storage.)
 *
 * @return a descriptive error message explaining why the last command failed.
 */
DLLEXPORT char *tj3GetErrorStr(tjhandle handle);
/**
 * Returns a code indicating the severity of the last error.  See
 * @ref TJERR "Error codes".
 *
 * @param handle handle to a TurboJPEG instance
 *
 * @return a code indicating the severity of the last error.  See
 * @ref TJERR "Error codes".
 */
DLLEXPORT int tj3GetErrorCode(tjhandle handle);
/**
 * Load a packed-pixel image with 9 to 12 bits of data precision per sample
 * from disk into memory.
 *
 * @note If loading a PNG image using a TurboJPEG compression instance, the
 * ICC profile (if any) embedded in the PNG image is extracted and associated
 * with the TurboJPEG instance if #TJPARAM_SAVEMARKERS is set to `2` or `4`.
 *
 * @param handle handle to a TurboJPEG instance
 *
 * @param filename name of a file containing a packed-pixel image in PNG or
 * PBMPLUS (PPM/PGM) format.  The target data precision (from 9 to 12 bits per
 * sample) can be specified using #TJPARAM_PRECISION and defaults to 12 if
 * #TJPARAM_PRECISION is unset or out of range.  If the data precision of the
 * PNG or PBMPLUS file does not match the target data precision, then
 * upconverting or downconverting will be performed.
 *
 * @param width pointer to an integer variable that will receive the width (in
 * pixels) of the packed-pixel image
 *
 * @param align row alignment (in samples) of the packed-pixel buffer to be
 * returned (must be a power of 2.)  Setting this parameter to n will cause all
 * rows in the buffer to be padded to the nearest multiple of n samples
 * (1 = unpadded.)
 *
 * @param height pointer to an integer variable that will receive the height
 * (in pixels) of the packed-pixel image
 *
 * @param pixelFormat pointer to an integer variable that specifies or will
 * receive the pixel format of the packed-pixel buffer.  The behavior of this
 * function will vary depending on the value of `*pixelFormat` passed to the
 * function:
 * - @ref TJPF_UNKNOWN : The packed-pixel buffer returned by this function will
 * use the most optimal pixel format for the file type, and `*pixelFormat` will
 * contain the ID of that pixel format upon successful return from this
 * function.
 * - @ref TJPF_GRAY : Only PGM files can be loaded.
 * - @ref TJPF_CMYK : The RGB or grayscale pixels stored in the file will be
 * converted using a quick & dirty algorithm that is suitable only for testing
 * purposes.  (Proper conversion between CMYK and other formats requires a
 * color management system.)
 * - Other @ref TJPF "pixel formats" : The packed-pixel buffer will use the
 * specified pixel format, and pixel format conversion will be performed if
 * necessary.
 *
 * @return a pointer to a newly-allocated buffer containing the packed-pixel
 * image, converted to the chosen pixel format and with the chosen row
 * alignment, or NULL if an error occurred (see #tj3GetErrorStr().)  This
 * buffer should be freed using #tj3Free().
 */
DLLEXPORT short *tj3LoadImage12(tjhandle handle, const char *filename,
                                int *width, int align, int *height,
                                int *pixelFormat);
/**
 * Load a packed-pixel image with 13 to 16 bits of data precision per sample
 * from disk into memory.
 *
 * @note If loading a PNG image using a TurboJPEG compression instance, the
 * ICC profile (if any) embedded in the PNG image is extracted and associated
 * with the TurboJPEG instance if #TJPARAM_SAVEMARKERS is set to `2` or `4`.
 *
 * @param handle handle to a TurboJPEG instance
 *
 * @param filename name of a file containing a packed-pixel image in PNG or
 * PBMPLUS (PPM/PGM) format.  The target data precision (from 13 to 16 bits per
 * sample) can be specified using #TJPARAM_PRECISION and defaults to 16 if
 * #TJPARAM_PRECISION is unset or out of range.  If the data precision of the
 * PNG or PBMPLUS file does not match the target data precision, then
 * upconverting or downconverting will be performed.
 *
 * @param width pointer to an integer variable that will receive the width (in
 * pixels) of the packed-pixel image
 *
 * @param align row alignment (in samples) of the packed-pixel buffer to be
 * returned (must be a power of 2.)  Setting this parameter to n will cause all
 * rows in the buffer to be padded to the nearest multiple of n samples
 * (1 = unpadded.)
 *
 * @param height pointer to an integer variable that will receive the height
 * (in pixels) of the packed-pixel image
 *
 * @param pixelFormat pointer to an integer variable that specifies or will
 * receive the pixel format of the packed-pixel buffer.  The behavior of this
 * function will vary depending on the value of `*pixelFormat` passed to the
 * function:
 * - @ref TJPF_UNKNOWN : The packed-pixel buffer returned by this function will
 * use the most optimal pixel format for the file type, and `*pixelFormat` will
 * contain the ID of that pixel format upon successful return from this
 * function.
 * - @ref TJPF_GRAY : Only PGM files can be loaded.
 * - @ref TJPF_CMYK : The RGB or grayscale pixels stored in the file will be
 * converted using a quick & dirty algorithm that is suitable only for testing
 * purposes.  (Proper conversion between CMYK and other formats requires a
 * color management system.)
 * - Other @ref TJPF "pixel formats" : The packed-pixel buffer will use the
 * specified pixel format, and pixel format conversion will be performed if
 * necessary.
 *
 * @return a pointer to a newly-allocated buffer containing the packed-pixel
 * image, converted to the chosen pixel format and with the chosen row
 * alignment, or NULL if an error occurred (see #tj3GetErrorStr().)  This
 * buffer should be freed using #tj3Free().
 */
DLLEXPORT unsigned short *tj3LoadImage16(tjhandle handle, const char *filename,
                                         int *width, int align, int *height,
                                         int *pixelFormat);
/**
 * Save a packed-pixel image with 2 to 8 bits of data precision per sample from
 * memory to disk.
 *
 * @note If saving a PNG image using a TurboJPEG decompression instance, the
 * ICC profile (if any) that was previously extracted from a JPEG image is
 * transferred to the PNG image if #TJPARAM_SAVEMARKERS is set to `2` or `4`.
 *
 * @param handle handle to a TurboJPEG instance
 *
 * @param filename name of a file to which to save the packed-pixel image.  The
 * image will be stored in PNG, PBMPLUS (PPM/PGM), or Windows BMP format,
 * depending on the file extension.  Windows BMP files require 8-bit-per-sample
 * data precision.  When saving a PNG or PBMPLUS file, the source data
 * precision (from 2 to 8 bits per sample) can be specified using
 * #TJPARAM_PRECISION and defaults to 8 if #TJPARAM_PRECISION is unset or out
 * of range.
 *
 * @param buffer pointer to a buffer containing a packed-pixel RGB, grayscale,
 * or CMYK image to be saved
 *
 * @param width width (in pixels) of the packed-pixel image
 *
 * @param pitch samples per row in the packed-pixel image.  Setting this
 * parameter to 0 is the equivalent of setting it to
 * <tt>width * #tjPixelSize[pixelFormat]</tt>.
 *
 * @param height height (in pixels) of the packed-pixel image
 *
 * @param pixelFormat pixel format of the packed-pixel image (see @ref TJPF
 * "Pixel formats".)  If this parameter is set to @ref TJPF_GRAY, then the
 * image will be stored in grayscale PNG, PGM, or 8-bit-per-pixel (indexed
 * color) BMP format.  Otherwise, the image will be stored in truecolor PNG,
 * PPM, or 24-bit-per-pixel BMP format.  If this parameter is set to
 * @ref TJPF_CMYK, then the CMYK pixels will be converted to RGB using a quick
 * & dirty algorithm that is suitable only for testing purposes.  (Proper
 * conversion between CMYK and other formats requires a color management
 * system.)
 *
 * @return 0 if successful, or -1 if an error occurred (see #tj3GetErrorStr().)
 */
DLLEXPORT int tj3SaveImage8(tjhandle handle, const char *filename,
                            const unsigned char *buffer, int width, int pitch,
                            int height, int pixelFormat);
/**
 * Save a packed-pixel image with 9 to 12 bits of data precision per sample
 * from memory to disk.
 *
 * @note If saving a PNG image using a TurboJPEG decompression instance, the
 * ICC profile (if any) that was previously extracted from a JPEG image is
 * transferred to the PNG image if #TJPARAM_SAVEMARKERS is set to `2` or `4`.
 *
 * @param handle handle to a TurboJPEG instance
 *
 * @param filename name of a file to which to save the packed-pixel image,
 * which will be stored in PNG or PBMPLUS (PPM/PGM) format.  The source data
 * precision (from 9 to 12 bits per sample) can be specified using
 * #TJPARAM_PRECISION and defaults to 12 if #TJPARAM_PRECISION is unset or out
 * of range.
 *
 * @param buffer pointer to a buffer containing a packed-pixel RGB, grayscale,
 * or CMYK image to be saved
 *
 * @param width width (in pixels) of the packed-pixel image
 *
 * @param pitch samples per row in the packed-pixel image.  Setting this
 * parameter to 0 is the equivalent of setting it to
 * <tt>width * #tjPixelSize[pixelFormat]</tt>.
 *
 * @param height height (in pixels) of the packed-pixel image
 *
 * @param pixelFormat pixel format of the packed-pixel image (see @ref TJPF
 * "Pixel formats".)  If this parameter is set to @ref TJPF_GRAY, then the
 * image will be stored in PGM or grayscale PNG format.  Otherwise, the image
 * will be stored in PPM or truecolor PNG format.  If this parameter is set to
 * @ref TJPF_CMYK, then the CMYK pixels will be converted to RGB using a quick
 * & dirty algorithm that is suitable only for testing purposes.  (Proper
 * conversion between CMYK and other formats requires a color management
 * system.)
 *
 * @return 0 if successful, or -1 if an error occurred (see #tj3GetErrorStr().)
 */
DLLEXPORT int tj3SaveImage12(tjhandle handle, const char *filename,
                             const short *buffer, int width, int pitch,
                             int height, int pixelFormat);
/**
 * Save a packed-pixel image with 13 to 16 bits of data precision per sample
 * from memory to disk.
 *
 * @note If saving a PNG image using a TurboJPEG decompression instance, the
 * ICC profile (if any) that was previously extracted from a JPEG image is
 * transferred to the PNG image if #TJPARAM_SAVEMARKERS is set to `2` or `4`.
 *
 * @param handle handle to a TurboJPEG instance
 *
 * @param filename name of a file to which to save the packed-pixel image,
 * which will be stored in PNG or PBMPLUS (PPM/PGM) format.  The source data
 * precision (from 13 to 16 bits per sample) can be specified using
 * #TJPARAM_PRECISION and defaults to 16 if #TJPARAM_PRECISION is unset or out
 * of range.
 *
 * @param buffer pointer to a buffer containing a packed-pixel RGB, grayscale,
 * or CMYK image to be saved
 *
 * @param width width (in pixels) of the packed-pixel image
 *
 * @param pitch samples per row in the packed-pixel image.  Setting this
 * parameter to 0 is the equivalent of setting it to
 * <tt>width * #tjPixelSize[pixelFormat]</tt>.
 *
 * @param height height (in pixels) of the packed-pixel image
 *
 * @param pixelFormat pixel format of the packed-pixel image (see @ref TJPF
 * "Pixel formats".)  If this parameter is set to @ref TJPF_GRAY, then the
 * image will be stored in PGM or grayscale PNG format.  Otherwise, the image
 * will be stored in PPM or truecolor PNG format.  If this parameter is set to
 * @ref TJPF_CMYK, then the CMYK pixels will be converted to RGB using a quick
 * & dirty algorithm that is suitable only for testing purposes.  (Proper
 * conversion between CMYK and other formats requires a color management
 * system.)
 *
 * @return 0 if successful, or -1 if an error occurred (see #tj3GetErrorStr().)
 */
DLLEXPORT int tj3SaveImage16(tjhandle handle, const char *filename,
                             const unsigned short *buffer, int width,
                             int pitch, int height, int pixelFormat);