platforms/android/app/src/main/cpp/3rdparty/libjpeg-turbo/jna/TJ.java


  public static Pointer loadImage12(Pointer handle, String filename,
                                    IntByReference width, int align,
                                    IntByReference height,
                                    IntByReference pixelFormat)
                                    throws Exception {
    Pointer retval = tj3LoadImage12(handle, filename, width, align, height,
                                    pixelFormat);
    if (retval == null)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
    return retval;
  }

  // --------------------------------------------------------------------------

  public static native Pointer tj3LoadImage16(Pointer handle, String filename,
                                              IntByReference width, int align,
                                              IntByReference height,
                                              IntByReference pixelFormat);

  public static Pointer loadImage16(Pointer handle, String filename,
                                    IntByReference width, int align,
                                    IntByReference height,
                                    IntByReference pixelFormat)
                                    throws Exception {
    Pointer retval = tj3LoadImage16(handle, filename, width, align, height,
                                    pixelFormat);
    if (retval == null)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
    return retval;
  }

  // --------------------------------------------------------------------------

  public static native int tj3SaveImage8(Pointer handle, String filename,
                                         Pointer buffer, int width, int pitch,
                                         int height, int pixelFormat);

  public static void saveImage8(Pointer handle, String filename,
                                Pointer buffer, int width, int pitch,
                                int height, int pixelFormat) throws Exception {
    if (tj3SaveImage8(handle, filename, buffer, width, pitch, height,
                      pixelFormat) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3SaveImage12(Pointer handle, String filename,
                                          Pointer buffer, int width, int pitch,
                                          int height, int pixelFormat);

  public static void saveImage12(Pointer handle, String filename,
                                 Pointer buffer, int width, int pitch,
                                 int height, int pixelFormat)
                                 throws Exception {
    if (tj3SaveImage12(handle, filename, buffer, width, pitch, height,
                       pixelFormat) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3SaveImage16(Pointer handle, String filename,
                                          Pointer buffer, int width, int pitch,
                                          int height, int pixelFormat);

  public static void saveImage16(Pointer handle, String filename,
                                 Pointer buffer, int width, int pitch,
                                 int height, int pixelFormat)
                                 throws Exception {
    if (tj3SaveImage16(handle, filename, buffer, width, pitch, height,
                       pixelFormat) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }
};
